--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <body>
     <head></head>
+    <header class="header">
+        <link rel="stylesheet" href="style.css">
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a href="#work">Our Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#careers">Careers</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </header>
     <body>
         <div>Hello world</div>
     </body>
