--- a/index.html
+++ b/index.html
@@ -1,17 +1,76 @@
 <body>
-    <head></head>
-    <header class="header">
+    <head>
         <link rel="stylesheet" href="style.css">
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-          <li><a href="#work">Our Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#careers">Careers</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </header>
+    </head>
     <body>
-        <div>Hello world</div>
+        <header class="header">
+            <div class="header_left">
+                <a href="" class="logo"><img src="img/logo.png" width="50" alt=""></a>
+                <span class="title_header">Garges Tennis de table</span>
+            </div>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+              <li><a href="#work">Présentation</a></li>
+              <li><a href="#about">Inscription</a></li>
+              <li><a href="#careers">Horaire</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </header>
+
+          <div class="container_layout">
+            <div class="main_title">Garges AADB tennis de table</div>
+            <div class="sub_title">@gargesAADB  · Club de sport</div>
+          </div>
+
+          <div class="container_home">
+            <div class="container_events">
+                <div class="event">Evènement</div>
+                <div class="content_event">
+                    <div class="img_event"><img src="img/stage1.jpg" width="600" height="" alt="stage"></div>
+                </div>
+            </div>
+            <div class="container_news">
+                <div class="news">Actualités</div>
+                <div class="content_new">
+                    <div class="img_news"><img src="img/competitif.png" width="50" alt=""></div>
+                    <div class="first_row">
+                        <div class="title_news">Résultat : Poule 5 tour n°3</div>
+                        <div class="second_row">
+                            <div class="description_news">GARGES 1</div>
+                            <div class="date_news">12/02/2022</div>
+                            <div class="next"><a href="#">Voir</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content_new">
+                    <div class="img_news"><img src="img/youtube.png" width="50" alt=""></div>
+                    <div class="first_row">
+                        <div class="title_news">Championnats de France : Seniors 2022</div>
+                        <div class="second_row">
+                            <div class="description_news">Jour 1 - Table 1</div>
+                            <div class="date_news">24/06/2022</div>
+                            <div class="next"><a href="#">Voir</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content_new">
+                    <div class="img_news"><img src="img/book.png" width="50" alt=""></div>
+                    <div class="first_row">
+                        <div class="title_news">Culture physique : Le tennis de table</div>
+                        <div class="second_row">
+                            <div class="description_news">L'effet Magnus</div>
+                            <div class="next"><a href="#">Voir</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
     </body>
+    <footer>
+        <div class="footer_bot">
+            <div class="text_footer">Viens nous suivre sur nos réseaux </div>
+            <div class="icon_footer"><a href="#"><img src="img/facebook.png" width="50" alt=""></a><a href=""><img src="img/twitter.png" width="50" alt=""></a></div>
+        </div>
+    </footer>
 </body>
