--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
         <header class="header">
             <div class="header_left">
                 <a href="index.html" class="logo"><img src="img/logo.png" width="50" alt=""></a>
@@ -15,8 +14,7 @@
             <ul class="menu">
               <li><a href="#">Présentation</a></li>
               <li><a href="#about">Inscription</a></li>
-              <li><a href="#careers">Horaire</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="information.html">Information Club</a></li>
             </ul>
           </header>
 
@@ -29,7 +27,7 @@
             <div class="container_events">
                 <div class="event">Evènement</div>
                 <div class="content_event">
-                    <div class="img_event"><img src="img/stage1.jpg" width="600" height="" alt="stage"></div>
+                    <div class="img_event"><img src="img/stage-30-10.png" width="600" height="" alt="stage"></div>
                 </div>
             </div>
             <div class="container_news">
@@ -117,11 +115,10 @@
                 </div>
             </div>
           </div>
-    </body>
     <footer>
         <div class="footer_bot">
             <div class="text_footer">Viens nous suivre sur nos réseaux </div>
-            <div class="icon_footer"><a href="#"><img src="img/facebook.png" width="50" alt=""></a><a href=""><img src="img/twitter.png" width="50" alt=""></a></div>
+            <div class="icon_footer"><a href="https://www.facebook.com/gargesAADB" target="_blank"><img src="img/facebook.png" width="50" alt=""></a><a href=""><img src="img/twitter.png" width="50" alt=""></a></div>
         </div>
     </footer>
 </body>
